--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,35 @@
-fastapi
-uvicorn[standard]
-pydantic
-gitpython
-pytest
-requests
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+fastapi==0.128.0
+gitdb==4.0.12
+GitPython==3.1.46
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+iniconfig==2.3.0
+packaging==25.0
+pluggy==1.6.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+PySide6==6.10.1
+PySide6_Addons==6.10.1
+PySide6_Essentials==6.10.1
+pytest==9.0.2
+python-dotenv==1.2.1
+PyYAML==6.0.3
+requests==2.32.5
+shiboken6==6.10.1
+smmap==5.0.2
+starlette==0.50.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.2
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
