--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ PySide6==6.10.1
 PySide6_Addons==6.10.1
 PySide6_Essentials==6.10.1
 pytest==9.0.2
+pytest-qt==4.5.0
 python-dotenv==1.2.1
 PyYAML==6.0.3
 requests==2.32.5
