--- a/data/templates/restomod.yaml
+++ b/data/templates/restomod.yaml
@@ -24,8 +24,11 @@ node_types:
     allowed_children: []
 
 properties:
-  - name: cost
+  - name: cost_estimate
     type: currency
+  - name: difficulty
+    type: select
+    options: [easy, medium, hard]
   - name: impact
     type: number
   - name: effort
