--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Flask==3.0.0
 Flask-CORS==4.0.0
 Flask-SocketIO==5.6.0
 python-socketio>=5.12.0
+eventlet>=0.33.0
 PyYAML==6.0.1
-pytest==9.0.2
+pytest==8.4.2
 pytest-qt==4.5.0
-PySide6==6.10.1
+PySide6==6.9.3
+pyinstaller>=6.0.0
