--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==3.0.0
 Flask-CORS==4.0.0
 Flask-SocketIO==5.6.0
+Jinja2==3.1.4
 python-socketio>=5.12.0
 eventlet>=0.33.0
 PyYAML==6.0.1
+requests==2.32.3
 pytest==8.4.2
 pytest-qt==4.5.0
 PySide6==6.9.3
