--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-socketio>=5.12.0
 eventlet>=0.33.0
 PyYAML==6.0.1
 requests==2.32.3
+python-dotenv==1.0.0
 pytest==8.4.2
 pytest-qt==4.5.0
 PySide6==6.9.3
